# libNumaAPI

./: .gitignore  CMakeLists.txt  LICENSE
example/: example.c
include/: libnumaapi.h
source/: build_config.h  libnumaapi.c  libnumaapi_linux.c  libnumaapi_win32.c  numaapi_linux.c  numaapi_win32.c
